<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/location_result_text_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="2.89"
        android:scrollbars="vertical"
        android:maxLines="12"
        android:textColor="#FFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/location_mode_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_mode"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioGroup
                    android:id="@+id/location_mode_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >

                     <RadioButton
                         android:id="@+id/radio_high_accuracy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="true"
                         android:text="@string/high_accuracy" />

                    <RadioButton
                        android:id="@+id/radio_battery_saving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_saving" />

                    <RadioButton
                        android:id="@+id/radio_device_sensors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_sensors" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/coor_type_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coor_type"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioGroup
                    android:id="@+id/coor_type_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/radio_gcj02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/gcj02" />

                    <RadioButton
                        android:id="@+id/radio_bd09ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bd09ll" />

                    <RadioButton
                        android:id="@+id/radio_bd09"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bd09" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/location_mode_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.88"/>

        <LinearLayout
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/scan_span_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_span"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="1000"
                android:inputType="number" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.89"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/reverse_geo_code_result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reverse_geo_code_result"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/is_reverse_geo_code_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:gravity="center|top"
        android:orientation="vertical" >

        <Switch
            android:id="@+id/location_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Start Location"
            android:textOff="Stop Location"/>

    </LinearLayout>

</LinearLayout>